# AlexandriaLibrary

./: .gitignore  README.extras.md  README.md  requirements.txt
boveda/: main0.py  main1.py  main2.py  main3.py
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  pyproject.toml  toml_gen.py
src/alexandria_library/: about.py  desktop.py  librarian.py
src/alexandria_library/modules/: about_window.py  bibtex.py  context_menu.py  files.py  filetypes.py  message.py  pdfs.py  proxy.py  search_results.py  worker.py
