[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alexandria_library"
version = "0.1.0"
description = "Program for the management and organization of digital files."
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["library", "management", "organizer"]
dependencies = [
    "PyQt5",
    "PyPDF2",
    "scholarly"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx/AlexandriaLibrary/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx/AlexandriaLibrary/tree/main/doc"
"Source" = "https://github.com/trucomanx/AlexandriaLibrary"

[project.scripts]
"alexandria-library" = "alexandria_library.librarian:main"

[tool.setuptools]
packages = ["alexandria_library", "alexandria_library.modules"]

[tool.setuptools.package-data]
"alexandria_library" = ["icons/logo.png"]
